tests/neg/i14432c.check
-- [E173] Reference Error: tests/neg/i14432c.scala:12:18 ---------------------------------------------------------------
12 |class Bar extends example.Foo(23) { // error: cant access private[example] ctor
   |                  ^^^^^^^^^^^
   |                  constructor Foo cannot be accessed as a member of example.Foo from class Bar.
   |                    private[example] constructor Foo can only be accessed from package example.
-- [E172] Type Error: tests/neg/i14432c.scala:16:43 --------------------------------------------------------------------
16 |  val mFoo = summon[Mirror.Of[example.Foo]] // error: no mirror
   |                                           ^
   |No given instance of type scala.deriving.Mirror.Of[example.Foo] was found for parameter x of method summon in object Predef. Failed to synthesize an instance of type scala.deriving.Mirror.Of[example.Foo]:
   |	* class Foo is not a generic product because the constructor of class Foo is inaccessible from the calling scope.
   |	* class Foo is not a generic sum because it is not a sealed class
